--- a/AngularJsWithTypescript/bower.json
+++ b/AngularJsWithTypescript/bower.json
@@ -9,11 +9,9 @@
   "private": true,
   "dependencies": {
     "angular": "~1.4.4",
-    "angular-resource": "~1.4.4",
     "angular-route": "~1.4.4",
     "bootstrap": "~3.3.5",
-    "jquery": "~2.1.4",
-    "lodash": "~3.10.1"
+    "jquery": "~2.1.4"
   },
   "devDependencies": {}
 }
